--- a/main.html
+++ b/main.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Colored Paragraphs</title>
+	<style>
+		#yellow {
+			background-color: yellow;
+			border: 1px solid green;
+		}
+		#red {
+			background-color: red;
+			border: 1px solid black;
+		}
+		#green {
+			background-color: green;
+			border: 1px solid yellow;
+		}
+	</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<p id="yellow">This is Yellow paragraph</p>
+	<p id="red">This is Red paragraph</p>
+	<p id="green">This is Green paragraph</p>
 
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
